--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h3{
 main{
     font-family: 'Poppins', sans-serif;
     min-height: 100vh;
-    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    background: linear-gradient(to right top, #65dfac, #6cdbeb);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,7 +40,6 @@ main{
      z-index: 3;
      backdrop-filter: blur(2rem);
      display:flex;
-
 }
 .circle1,
 .circle2{
@@ -108,7 +107,7 @@ main{
 }
 
 
-/* GAMES */
+/* Main Content */
 
 .status{
     margin-bottom: 3rem;
@@ -128,8 +127,8 @@ main{
     width:100%;
 }
 
-.games{
-    flex: 5;
+.main-content{
+    flex: 4;
     margin: 5rem;
     display:flex;
     flex-direction: column;
@@ -165,37 +164,19 @@ main{
 }
 .card-body{
     display:flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     margin:1rem;
 }
 .card-items{
     flex: 1;
 }
-
-.progress{
-    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
-    width: 100%;
-    height: 25%;
-    border-radius: 1rem; 
-    position: relative;
-    overflow: hidden;
-}
-
-.progress::after{
-    content: "";
-    width: 100%;
-    height: 100%;
-    background: rgb(236,236,236);
-    position:absolute;
-    left: 60%;
+.card-items-mail{
+    flex: 1;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 
 
-.percentage{
-    font-weight: bold;
-    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
